closes #427 fixed dark mode style of calendar.

--- a/apps/mobile/pushtracker/src/app/scss/_variables.scss
+++ b/apps/mobile/pushtracker/src/app/scss/_variables.scss
@@ -37,7 +37,7 @@ $permobil-success: #00a73c;
 $white: #fff;
 $black: #202125;
 $light-grey: #d3d3d3;
-$grey: rgb(177, 177, 177);
+$grey: #b1b1b1; // rgb(177, 177, 177);
 $dark-grey: #727377;
 $success-green: #4bb543;
 $inactive-grey: #666769;
